Fixed merge layout bug

--- a/style.css
+++ b/style.css
@@ -43,11 +43,7 @@ p {
 footer {
     display: flex;
     justify-content: center;
-    justify-content: center;
     align-items: center;
-    padding-bottom: 3px;
-    position: absolute;
-    bottom: 0;
     padding-bottom: 3px;
     position: absolute;
     bottom: 0;
@@ -60,9 +56,6 @@ footer {
 .button {
     border: none;
     color: white;
-    width: 80px;
-    height: 30px;
-    padding: 6px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -89,7 +82,16 @@ footer {
     color: white;
 }
 
-#pageContainer {
+#pages_button_container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 8px auto;
+    width: 100%;
+    height: 30px;
+}
+
+#pages_container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,11 +106,71 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* margin: 0 auto; */
+}
+
+.rings-input-container {
+    display: flex;
     align-items: center;
-    padding-bottom: 3px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px;
+}
+
+.rings-output-container {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+
+.rings-outputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px;
+}
+
+input {
+    width: 70px;
+    height: 30px;
+    text-align: center;
+}
+
+#rings_input {
+    width: 110px;
+}
+
+/* Impedance styling parameters */
+.impedance-input {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 10px;
+    padding: 10px;
+}
+
+#voltage_input {
+    width: 80px;
+}
+
+.imp-button {
+    width: 68px;
+    height: 28px;
+    padding: 6px;
+    background-color: white;
+    color: black;
+}
+
+.imp-button:hover {
+    background-color: #00bfff;
+    color: white;
+}
+
+.imp-button.active {
+    background-color: #014;
     color: white;
 }
 
